<resources>
    <string name="app_name">我的例子</string>

    <string name="main_activity_btn_file_download">文件下载</string>
    <string name="main_activity_btn_websocket">WebSocket</string>
    <string name="main_activity_btn_setting">设置页跳转</string>
    <string name="main_activity_btn_utils">工具</string>
    <string name="main_activity_btn_mobile">OS</string>
    <string name="main_activity_btn_view">View</string>
    <string name="main_activity_btn_toolbar">Toolbar</string>
    <string name="main_activity_btn_NFC">NFC</string>
    <string name="main_activity_btn_video_play">视频播放</string>
    <string name="main_activity_btn_rtmp">rtmp视频播放</string>
    <string name="main_activity_btn_bluetooth">蓝牙设备</string>
    <string name="main_activity_btn_navigation">导航</string>
    <string name="main_activity_btn_db">数据库</string>
    <string name="main_activity_btn_linkman">获取联系人</string>
    <string name="main_activity_btn_flash_and_shake">手机震动和闪光灯</string>
    <string name="main_activity_btn_recording">录音</string>
    <string name="main_activity_btn_video_record">视频录制</string>
    <string name="media_activity_btn_crop_pic">截图</string>
    <string name="main_activity_btn_media">多媒体</string>
    <string name="main_activity_btn_qrcode">二维码</string>
    <string name="main_activity_btn_language">语言环境</string>
    <string name="main_activity_btn_time_zone">时区</string>
    <string name="main_activity_btn_gesture_lock">手势解锁</string>
    <string name="main_activity_btn_wifi">wifi</string>
    <string name="main_activity_btn_gif">Gif</string>
    <string name="main_activity_btn_glide">Glide</string>
    <string name="main_activity_btn_design_view">DesignView</string>
    <string name="main_activity_btn_webview">WebView</string>
    <string name="main_activity_btn_img_marker">图片标点</string>
    <string name="main_activity_btn_email">Email</string>
    <string name="main_activity_btn_swipe_view">SwipeView</string>
    <string name="main_activity_btn_photo_picker">PhotoPicker</string>
    <string name="main_activity_btn_gson_input">解析输入JSON</string>
    <string name="main_activity_btn_gps">gps</string>
    <string name="main_activity_btn_BswRecyclerView">BswRecyclerView</string>
    <string name="main_activity_btn_WaveView">WaveView</string>
    <string name="main_activity_btn_auto_hide_head">上滑自动隐藏头的滚动视图</string>
    <string name="main_activity_btn_loading_state">加载状态</string>
    <string name="main_activity_btn_bulk_format">TextView文字批量格式化</string>
    <string name="main_activity_btn_bsw_toolbar">BswToolbar</string>

    <string name="email_address">接收人</string>
    <string name="email_content">邮件内容</string>
    <string name="email_annex">附件</string>

    <!--resId-->
    <string name="img">img</string>
    <string name="video">video</string>
    <string name="capture">capture</string>
    <string name="search">搜索</string>

    <string name="NFC_read">NFC_read</string>
    <string name="NFC_write">NFC_write</string>

    <!--toast-->
    <string name="crop_picture_error">图片资源获取失败，请重新选择</string>
    <string name="file_error">文件异常</string>
    <string name="cannot_be_null">不能为空</string>

    <!--权限-->
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启相机，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string name="permission_denied">您拒绝了授权</string>

    <!--功能-->
    <string name="flash_on">开启闪光灯</string>
    <string name="flash_off">关闭闪光灯</string>
    <string name="album">相册</string>
    <string name="recognize_failed">识别失败</string>

    <string name="confirm">确认</string>
    <string name="download">下载</string>
    <string name="cancel">取消</string>
    <string name="all_loaded">已全部加载</string>
    <string name="data_abnormal">数据异常</string>
</resources>
